added Logic in calculator

--- a/src/App.css
+++ b/src/App.css
@@ -39,3 +39,20 @@ body {
 
 *:focus {
   outline: none; }
+
+.calculator-display {
+  position: relative;
+  color: white;
+  height: 40px;
+}
+  
+.auto-scaling-text {
+  display: inline-block;
+}
+  
+.calculator-display .auto-scaling-text {
+  padding: 0 30px;
+  position: absolute;
+  right: 0;
+  transform-origin: right;
+}
